# digitizationpp

./: .gitignore  CMakeLists.txt  ConfigFile_new.txt  MC_data_new.cxx  README.md  Z_A_isotopes.csv  joinPeds.cxx  main.cxx
VignettingMap/: vign_MANGO.root
config/: ConfigFile_new.txt  alpha_440.conf
doc/: OpenCV.md  ROOT.md  ROOTAna.md  doxygen.cfg
include/: ConfigManager.h  DigitizationRunner.h  Globals.h  TrackProcessor.h  Utils.h  cygnolib.h  s3.h
input/: HeCF4gas_AmBe_part0.root  HeCF4gas_AmBe_part10.root  LIME_CADshield_6Cu_210Bi_part0.root  NRlist_AmBeISO_LIME_neutrons_50cmPE_10cmCu_NOPb_10umStep_part0.py  NRlist_AmBeISO_LIME_neutrons_50cmPE_10cmCu_NOPb_10umStep_part10.py
src/: ConfigManager.cxx  DigitizationRunner.cxx  Globals.cxx  TrackProcessor.cxx  Utils.cxx  cygnolib.cxx  s3.cxx
